# videoroll

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  PROJECT_AUDIT.md  README.md  compose.yml  docker-compose.intel.yml  docker-compose.yml  pyproject.toml
deploy_compose/: Dockerfile
deploy_prod/: docker-compose.intel.yml  docker-compose.yml
docker/: entrypoint.sh  social-publisher-entrypoint.sh  social-publisher-requirements.txt  social-publisher.Dockerfile  verify-social-browser.py
docs/: AGENT_SKILLS.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  PROJECT_SPEC.md  REMOTE_API.md  SECURITY_AUDIT.md  realtime-events.md  social-publisher.md
migrations/: env.py
scripts/: build_export_prod.sh  dev_down.sh  dev_health.sh  dev_logs.sh  dev_up.sh  dev_web.sh  security_smoke.sh  smoke_local.sh
tests/: test_admin_auth_controls.py  test_agent_run_lookup.py  test_ai_service.py  test_auto_migrate_app_settings.py  test_auto_profile_store.py  test_auto_youtube_pipeline.py  test_auto_youtube_utils.py  test_bilibili_collection_helpers.py  test_bilibili_publish_idempotency.py  test_bilibili_publish_rate_limit.py  test_bilibili_upload_progress.py  test_db_session_pid_isolation.py  test_deployment_security.py  test_desktop_grants.py  test_dictionaries.py  test_egress_gateway.py  test_httpx_proxy.py  test_intel_gpu_detection.py  test_internal_service_routing.py  test_live_service.py  test_model_downloads.py  test_openvino_asr.py  test_orchestrator_architecture.py  test_orchestrator_asset_service.py  test_outbox.py  (+48 more)
(+228 files in other folders)
