[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "videoroll"
version = "0.1.0"
description = "Modular video processing pipeline (compliance-first)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "cryptography>=42.0.0",
  "huggingface-hub>=0.21.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "defusedxml>=0.7.1",
  "yt-dlp[default]>=2026.2.4",
  "deno>=2.6.9",
]

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/videoroll"]
